--- a/lib/scss/_buttons.scss
+++ b/lib/scss/_buttons.scss
@@ -6,6 +6,8 @@ $crodity-secondary-color: #dbbb55;
 
 @mixin crodity-login-button($color){
 
+  $hover-color = lighten(color, 5);
+
   & button{
 
    
@@ -15,12 +17,19 @@ $crodity-secondary-color: #dbbb55;
       height: auto !important;
 
       &:hover{
-        background-color: lighten($color, 5)
+        background-color: $hover-color;
+
+        //change hover of icon child too
+        & i {
+          color: $hover-color;      
+        }
+
       }
 
-      //icon position
+      //icon definitions, when existing as child of button
       & i {
         margin-left: 16px;
+        color: $color;
       }
 
       & span {
