--- a/lib/scss/_buttons.scss
+++ b/lib/scss/_buttons.scss
@@ -6,7 +6,7 @@ $crodity-secondary-color: #dbbb55;
 
 @mixin crodity-login-button($color){
 
-  $hover-color = lighten(color, 5);
+  $hover-color: lighten($color, 5);
 
   & button{
 
@@ -16,12 +16,13 @@ $crodity-secondary-color: #dbbb55;
       background-color: $color;
       height: auto !important;
 
+      //hover effect
       &:hover{
         background-color: $hover-color;
 
         //change hover of icon child too
         & i {
-          color: $hover-color;      
+          color: $hover-color !important;      
         }
 
       }
