--- a/lib/scss/_buttons.scss
+++ b/lib/scss/_buttons.scss
@@ -30,7 +30,8 @@ $crodity-secondary-color: #dbbb55;
       //icon definitions, when existing as child of button
       & i {
         margin-left: 16px;
-        color: $color;
+        color: $color !important;
+        transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 20ms;
       }
 
       & span {
