--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -14,6 +14,8 @@ $crodity-secondary-color: #dbbb55;
     & div {
       border-radius:  $crodity-login-button-login-radius !important;
       background-color: $color;
+      display: flex;
+      align-items: center;
       height: auto !important;
 
       //hover effect
