--- a/lib/scss/_buttons.scss
+++ b/lib/scss/_buttons.scss
@@ -8,19 +8,24 @@ $crodity-secondary-color: #dbbb55;
 
   $hover-color: lighten($color, 5);
 
-  & button{
+  button{
 
+    min-width: 150px;
+    
+    :hover{
+        
+        background-color: $hover-color !important;
+
+    }
    
-    & div {
+    div {
       border-radius:  $crodity-login-button-login-radius !important;
       background-color: $color;
-      display: flex;
-      align-items: center;
       height: auto !important;
 
       //hover effect
-      &:hover{
-        background-color: $hover-color;
+      :hover{
+        background-color: $hover-color !important;
 
         //change hover of icon child too
         & i {
@@ -30,13 +35,13 @@ $crodity-secondary-color: #dbbb55;
       }
 
       //icon definitions, when existing as child of button
-      & i {
+      i {
         margin-left: 16px;
         color: $color !important;
         transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 20ms;
       }
 
-      & span {
+      span {
         border-radius:  $crodity-login-button-login-radius !important;
       }
 
@@ -62,5 +67,14 @@ $crodity-secondary-color: #dbbb55;
 
 .crd-btn-login-sign{
   @include crodity-login-button($crodity-secondary-color);
+ 
+  font-size: 1.6rem;
+ 
+  button{
+    div{
+      color: white !important;
+    }
+  }
+  
 }
 
