--- a/lib/scss/_buttons.scss
+++ b/lib/scss/_buttons.scss
@@ -1,38 +1,23 @@
+@import '_colors.scss';
+
 $crodity-login-button-login-radius: 40px;
-$crodity-twitter-background: #0486b2;
-$crodity-fb-background: #2b3958;
-$crodity-email-background: #8faab6;
-$crodity-secondary-color: #dbbb55;
 
 @mixin crodity-login-button($color){
-
-  $hover-color: lighten($color, 5);
 
   button{
 
     min-width: 150px;
-    
-    :hover{
-        
-        background-color: $hover-color !important;
 
-    }
-   
     div {
       border-radius:  $crodity-login-button-login-radius !important;
       background-color: $color;
       height: auto !important;
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: row;
 
-      //hover effect
-      :hover{
-        background-color: $hover-color !important;
-
-        //change hover of icon child too
-        & i {
-          color: $hover-color !important;      
-        }
-
-      }
 
       //icon definitions, when existing as child of button
       i {
@@ -73,6 +58,7 @@ $crodity-secondary-color: #dbbb55;
   button{
     div{
       color: white !important;
+      justify-content: center;
     }
   }
   
